2007-03-09  Brian Nickel  <brian.nickel@gmail.com> 	* configure.ac: Fixed version information.
svn path=/trunk/taglib-sharp/; revision=74020

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2007-03-09  Brian Nickel  <brian.nickel@gmail.com>
+	* configure.ac: Fixed version information.
+
+2007-03-09  Brian Nickel  <brian.nickel@gmail.com>
 
 "I do not regret the things I've done, but those I did not do."
 
